2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c (commonio_remove): Fail when the name to be
	removed is used by different entries (like commonio_update does).
	* NEWS: This fix the behavior of groupdel when the system is not
	configured to support split group but different group entries
	have the name of the group to be deleted.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/useradd.c: Make sure the passwd, group, shadow, and
	gshadow files are unlocked on exit. Unlock locked files in
	fail_exit(). Prefer fail_exit() over exit().

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupdel.c: Make sure the group, and gshadow files are
	unlocked on exit. Add function fail_exit(). Use fail_exit()
	instead of exit().
	* src/groupdel.c: Fail immediately instead of increasing errors.
	Better handling of error cases, like locked group or gshadow file.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newusers.c: Make sure the passwd, group, shadow, and
	gshadow files are unlocked on exit. Add function fail_exit(). Use
	fail_exit() instead of exit().

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/gpasswd.c: Make sure the group and gshadow files are
	unlocked on exit. Add function fail_exit(). Use fail_exit()
	instead of exit().

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupdel.c: Do not rewrite the group and gshadow file
	in case of error.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupdel.c: Do not log that the group was deleted if an
	error occurred.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupdel.c: Do not raise an error if the group does
	not exist in the gshadow file.

2008-03-08  Nicolas François  <nicolas.francois@centraliens.net>

	* etc/login.defs: Document MAX_MEMBERS_PER_GROUP.
